<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastraLocalActivity"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <requestFocus/>
    <GridLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">


        <ImageView
                android:id="@+id/detailsImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_columnSpan="2"
                android:src="@drawable/place"

        />
        <TextView
                android:id="@+id/detailsName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:text="APAE"
                android:inputType="textCapSentences"
                android:textSize="44sp"
                android:textColor="@color/black"
                android:layout_columnSpan="2"
                android:gravity="center"

        />
        <TextView
                android:id="@+id/detailsType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:paddingTop="16dp"
                android:text="Alimentos"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_columnSpan="2"
                android:gravity="center"
        />
        <TextView
                android:id="@+id/detailsObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="24dp"
                android:paddingTop="16dp"
                android:text="OBS:Lorem ipsum urna integer etiam pretium non accumsan curabitur, etiam nunc venenatis class himenaeos sodales ligula etiam, tempus convallis sit nulla ad congue auctor. metus himenaeos dictumst donec augue bibendum arcu pretium class curabitur"
                android:textSize="20sp"
                android:layout_columnSpan="2"
        />

        <ImageView
                android:src="@drawable/ic_local_phone"
                style="@style/DetailsImage"
                android:contentDescription="@string/nome_local"
        />
        <TextView
                android:id="@+id/detailsPhone"
                style="@style/DetailsText"
                android:text="1982817212123232"
        />

        <ImageView
                style="@style/DetailsImage"
                android:src="@drawable/ic_mail"
                android:contentDescription="@string/email"

        />
        <TextView
                android:id="@+id/detailsEmail"
                style="@style/DetailsText"
                android:text="bianca@gmail.com"
        />

        <ImageView
                android:id="@+id/map"
                style="@style/DetailsImage"
                android:src="@drawable/ic_map_black_24dp"
                android:contentDescription="@string/endereco"/>

        <TextView
                android:id="@+id/detailsAddress"
                style="@style/DetailsText"
                android:text="Rua 15 de novembro"
        />

        <ImageView
                style="@style/DetailsImage"
                android:src="@drawable/ic_location_on"
                android:contentDescription="@string/endereco"/>

        <TextView
                android:id="@+id/detailsNumber"
                style="@style/DetailsText"
                android:text="Número 50"
        />

        <ImageView
                style="@style/DetailsImage"
                android:src="@drawable/ic_location_on"
                android:contentDescription="@string/endereco"/>
        <TextView
                android:id="@+id/detailsComplemento"
                style="@style/DetailsText"
                android:text="Apartament 2"
        />

        <ImageView
                style="@style/DetailsImage"
                android:src="@drawable/ic_location_on"
                android:contentDescription="@string/endereco"/>
        <TextView
                android:id="@+id/detailsBairro"
                style="@style/DetailsText"
                android:text="Jardim Itália"
        />
        <ImageView
                style="@style/DetailsImage"
                android:src="@drawable/ic_location_on"
                android:contentDescription="@string/endereco"/>
        <TextView
                android:id="@+id/detailsCep"
                style="@style/DetailsText"
                android:text="54.2203.4298"
        />



    </GridLayout>


</ScrollView>